# qtscript

./: .gitignore  .gitmodules  .qmake.conf  dependencies.yaml  qtscript.pro  sync.profile
doc/src/examples/: context2d.qdoc  defaultprototypes.qdoc  helloscript.qdoc
doc/src/scripting/: ecmascript.qdoc  qtscriptdebugger-manual.qdoc  qtscriptextensions.qdoc  scripting.qdoc
doc/src/snippets/: scriptdebugger.cpp
examples/script/: README  script.pro
examples/script/calculator/: calculator.pro  main.cpp
examples/script/context2d/: context2d.cpp  context2d.h  context2d.pro  domimage.cpp  domimage.h  environment.cpp  environment.h  main.cpp  qcontext2dcanvas.cpp  qcontext2dcanvas.h  window.cpp  window.h
examples/script/customclass/: bytearrayclass.cpp  bytearrayclass.h  bytearrayprototype.cpp  bytearrayprototype.h  customclass.pro  main.cpp
examples/script/defaultprototypes/: defaultprototypes.pro  main.cpp  prototypes.cpp  prototypes.h
examples/script/helloscript/: helloscript.pro  main.cpp
examples/script/marshal/: main.cpp  marshal.pro
examples/script/qscript/: main.cpp  qscript.pro
examples/script/qsdbg/: main.cpp  qsdbg.pro  scriptbreakpointmanager.cpp  scriptbreakpointmanager.h  scriptdebugger.cpp  scriptdebugger.h
examples/script/qstetrix/: main.cpp  qstetrix.pro  tetrixboard.cpp  (+1 more)
modules/: qt_script.pri  qt_scripttools.pri
src/: src.pro
src/script/: script.pro
src/scripttools/: scripttools.pro
tests/auto/: auto.pro
tests/auto/cmake/test_modules/: CMakeLists.txt  main.cpp
tests/benchmarks/: benchmarks.pro
tests/global/: global.cfg
(+368 files in other folders)
